--- a/chrome-extension/styles.css
+++ b/chrome-extension/styles.css
@@ -177,7 +177,7 @@
 }
 
 .bright_back {
-  background: url("https://occ-0-2433-448.1.nflxso.net/art/cd5c9/3e192edf2027c536e25bb5d3b6ac93ced77cd5c9.jpg");
+  background-size: cover;
 }
 
 .position-right-top {
